2017-03-09  Andrew Gold  <agold@apple.com>

        WKWebView should provide a way for clients to know the specific media state.
        https://bugs.webkit.org/show_bug.cgi?id=169140
        <rdar://problem/30838285>

        Reviewed by Alex Christensen.

        Instead of notifying the UIDelegate only when a capture begins and ends, 
        we now notify the UIDelegate of any change in capture state.

        * UIProcess/API/APIUIClient.h:

        (API::UIClient::mediaCaptureStateDidChange):
        (API::UIClient::didBeginCaptureSession): Deleted.
        (API::UIClient::didEndCaptureSession): Deleted.

        * UIProcess/API/Cocoa/WKUIDelegatePrivate.h:

        * UIProcess/API/Cocoa/WKWebViewPrivate.h:

        * UIProcess/Cocoa/UIDelegate.h:
        * UIProcess/Cocoa/UIDelegate.mm:
        (WebKit::UIDelegate::setDelegate):
        (WebKit::UIDelegate::UIClient::mediaCaptureStateDidChange):
        (WebKit::UIDelegate::UIClient::didBeginCaptureSession): Deleted.
        (WebKit::UIDelegate::UIClient::didEndCaptureSession): Deleted.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::isPlayingMediaDidChange):

2017-03-09  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Show HTTP protocol version and other Network Load Metrics (IP Address, Priority, Connection ID)
        https://bugs.webkit.org/show_bug.cgi?id=29687
        <rdar://problem/19281586>

        Reviewed by Matt Baker and Brian Burg.

        * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
        (toNetworkLoadPriority):
        (-[WKNetworkSessionDelegate URLSession:task:didFinishCollectingMetrics:]):
        * Shared/WebCoreArgumentCoders.h:
        Additional optional metrics on NetworkLoadMetrics.

2017-03-09  Daniel Bates  <dabates@apple.com>

        Guard Credential Management implementation behind a runtime enabled feature flag
        https://bugs.webkit.org/show_bug.cgi?id=169364
        <rdar://problem/30957425>

        Reviewed by Brent Fulgham.
